--- a/MsBuildDuplicateProjectGuid/MsBuildDuplicateProjectGuid.csproj
+++ b/MsBuildDuplicateProjectGuid/MsBuildDuplicateProjectGuid.csproj
@@ -13,10 +13,11 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageOutputPath>../nupkg</PackageOutputPath>
     <PackageProjectUrl>https://github.com/aolszowka/MsBuildDuplicateProjectGuid</PackageProjectUrl>
-    <PackageVersion>2.0.0</PackageVersion>
     <PackAsTool>true</PackAsTool>
     <RepositoryUrl>https://github.com/aolszowka/MsBuildDuplicateProjectGuid</RepositoryUrl>
     <ToolCommandName>duplicate-projectguid</ToolCommandName>
+    <VersionPrefix>2.0.0</VersionPrefix>
+    <VersionSuffix>$(VersionSuffix)</VersionSuffix>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="DuplicateProjectGuid.cs" />
