--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      # Configure Dotnet to push packages to GitHub Package Repo (GPR)
+      - uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: '3.1.x' # SDK Version to use.
+          source-url: https://nuget.pkg.github.com/${{github.repository_owner}}/index.json
+        env:
+          NUGET_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+
       # Restore all of our .NET Core Local Tools
       - name: .NET Core Local Tool Restore
         run: dotnet tool restore --add-source https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-tools/nuget/v3/index.json
@@ -33,13 +41,9 @@ jobs:
       - name: Package
         run: dotnet pack --configuration Release --no-build --version-suffix "ci-${{ github.sha }}"
 
-      # Upload the Asset
-      - name: Upload Artifacts to GitHub
-        uses: actions/upload-artifact@v2
-        with:
-            name: MsBuildDuplicateProjectGuid-${{ github.sha }}
-            path: |
-              nupkg/*.nupkg
+      # Publish the Package
+      - name: Publish the package to GPR
+        run: dotnet nuget push nupkg/*.nupkg
 
       # Deploy the Package
       - name: Deploy to GitHub Packages
