Enable GitHub actions (#12)
This commit adds a basic CI to this project which will:

1. Run dotnet-format
2. Build the project in Release
3. Pack the Product into a NuPkg
4. Upload the NuPkg to GitHub Actions Artifacts
5. (If in master) Upload the NuPkg to the GitHub Package Repository (GPR)

Furthermore this repository has been configured to now disallow pushes unless this CI runs though clean.

--- a/MsBuildDuplicateProjectGuid/MsBuildDuplicateProjectGuid.csproj
+++ b/MsBuildDuplicateProjectGuid/MsBuildDuplicateProjectGuid.csproj
@@ -10,14 +10,14 @@
   <PropertyGroup>
     <Authors>Ace Olszowka</Authors>
     <Description>Utility to find duplicated MsBuild Project GUIDs</Description>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageOutputPath>../nupkg</PackageOutputPath>
     <PackageProjectUrl>https://github.com/aolszowka/MsBuildDuplicateProjectGuid</PackageProjectUrl>
-    <PackageVersion>2.0.0</PackageVersion>
     <PackAsTool>true</PackAsTool>
     <RepositoryUrl>https://github.com/aolszowka/MsBuildDuplicateProjectGuid</RepositoryUrl>
     <ToolCommandName>duplicate-projectguid</ToolCommandName>
+    <VersionPrefix>2.0.0</VersionPrefix>
+    <VersionSuffix>$(VersionSuffix)</VersionSuffix>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="DuplicateProjectGuid.cs" />
