--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,4 +58,4 @@ jobs:
       # Publish the Package, but only if on Master
       - name: Publish the package to GPR (Release ONLY)
         if: ${{ github.ref == 'refs/heads/master' }}
-        run: echo dotnet nuget push nupkg/*.nupkg
+        run: dotnet nuget push nupkg/*.nupkg
